--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --port 5173",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
+    "jwt-decode": "^4.0.0",
     "pinia": "^2.2.6",
     "router": "^1.3.8",
     "sass": "^1.80.6",
