--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "router": "^1.3.8",
     "sass": "^1.80.6",
     "vue": "^3.2.13",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
