--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
+    "gsap": "^3.12.5",
     "jwt-decode": "^4.0.0",
     "pinia": "^2.2.6",
     "router": "^1.3.8",
