--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@vuepic/vue-datepicker": "^10.0.0",
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
     "gsap": "^3.12.5",
